# camelcrusher-rebuilt

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: CamelCrusherMetadata.cmake
docs/: CURRENT_HANDOFF.md  ENGINEERING_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  LEARNINGS.md  OPEN_SOURCE_NOTES.md  PUBLIC_COPY.md  QA_REPORT_2026-04-29.md  RELEASE_GUIDE.md
downloads/: CamelCrusher-Rebuilt-0.7.0.pkg  CamelCrusher-Rebuilt-0.7.1.pkg
include/camelcrusher_recalled/: CamelCrusherRecalledAudioUnit.h  LegacyChunk.h  LegacyImport.h  LegacyParameters.h  LegacyPresetBank.h  LegacySchema.h  LegacyState.h  ModernPluginModel.h  ModernProcessor.h  ModernRuntime.h  ModernRuntimeBridge.h
packaging/macos/: Distribution.xml.in  postinstall-au.sh.in  postinstall-vst2.sh.in
reference/original-distribution/: README.md
reference/original-ui/windows-default-skin/: README.md  SkinParameters.txt
src/compat_vst2/: CamelCrusherVst2Editor.h  CamelCrusherVst2Editor.mm  CamelCrusherVst2Effect.cpp  CamelCrusherVst2Effect.h  CamelCrusherVst2Entry.cpp  Info.plist.in
src/compat_vst2/sdk/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h
src/core/: DefaultLegacyFactoryBank.cpp  DefaultLegacyFactoryBank.h  LegacyChunk.cpp  LegacyImport.cpp  LegacyParameters.cpp  LegacyPresetBank.cpp  LegacySchema.cpp  LegacyState.cpp  ModernPluginModel.cpp  ModernProcessor.cpp  ModernRuntime.cpp  ModernRuntimeBridge.cpp
src/modern_au/: CamelCrusherRecalledAudioUnit.mm  CamelCrusherRecalledAudioUnitFactory.m  CamelCrusherRecalledExtensionMain.mm  CamelCrusherRecalledHostMain.mm  CamelCrusherRecalledViewController.h  CamelCrusherRecalledViewController.mm  HostApp.entitlements  HostInfo.plist.in  Info.plist.in
src/modern_vst3/: CamelCrusherVst3Controller.cpp  CamelCrusherVst3Controller.h  CamelCrusherVst3Editor.h  CamelCrusherVst3Editor.mm  CamelCrusherVst3Entry.cpp  CamelCrusherVst3IDs.h  CamelCrusherVst3Processor.cpp  CamelCrusherVst3Processor.h  CamelCrusherVst3State.cpp  CamelCrusherVst3State.h  CamelCrusherVst3Version.h
src/shared_ui/: CamelCrusherMacEditorSurface.h  CamelCrusherMacEditorSurface.mm
tests/: legacy_chunk_smoke.cpp  legacy_model_smoke.cpp  legacy_schema_smoke.cpp  modern_au_bundle_smoke.mm  modern_au_container_smoke.mm  modern_au_smoke.mm  modern_plugin_model_smoke.cpp  modern_processor_smoke.cpp  modern_runtime_bridge_smoke.cpp  modern_runtime_smoke.cpp  modern_vst3_bundle_smoke.cpp  modern_vst3_editor_smoke.mm  modern_vst3_smoke.cpp  test_fixture_extractor.py  test_modern_state_tool.py  vst2_bundle_smoke.cpp  vst2_compat_smoke.cpp  vst2_editor_smoke.mm
tests/fixtures/: README.md  bye_rmx_patron_camelcrusher.json  catalyst_patron_camelcrusher.json
tools/: build_macos_release.sh  camelcrusher_metadata.sh  extract_camelcrusher_fixture.py  install_dev_au_host_app.sh  install_dev_vst2.sh  install_dev_vst3.sh  modern_au_component_instantiate.mm  modern_au_component_probe.mm  modern_au_view_probe.mm  modern_state_tool.py  prepare_github_export.sh  render_mac_editor_preview.mm  render_vst2_layout_probe.py  swap_installed_vst2.sh  uninstall_camelcrusher.sh
